[package]
name = "worker_demo"
version = "0.1.0"
edition = "2021"
description = "Ratatui worker/async demo demonstrating tokio::spawn, mpsc channels, and CancellationToken"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
